--- a/small_scale.ipynb
+++ b/small_scale.ipynb
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,25 +1329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "make_scorer(roc_auc_score, needs_threshold=True)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1392,7 @@
        " 'jaccard_weighted': make_scorer(jaccard_score, pos_label=None, average=weighted)}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,25 +1640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function sklearn.metrics._ranking.roc_auc_score(y_true, y_score, average='macro', sample_weight=None, max_fpr=None, multi_class='raise', labels=None)>"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,7 +1790,56 @@
       "\ttrial 0\n",
       "\t\tdataset tic_tac\n",
       "\t\tdataset adult\n",
-      "\t\tdataset cloud\n"
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 1\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 2\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "partion 0.5\n",
+      "\ttrial 0\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 1\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 2\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "partion 0.8\n",
+      "\ttrial 0\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 1\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n",
+      "\t\tdataset cloud\n",
+      "\t\tdataset my_dota\n",
+      "\t\tdataset uci_data\n",
+      "\ttrial 2\n",
+      "\t\tdataset tic_tac\n",
+      "\t\tdataset adult\n"
      ]
     }
    ],
@@ -2064,7 +2091,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "from sklearn.externals import joblib \n",
+    "# Save the model as a pickle in a file \n",
+    "joblib.dump(knn, 'filename.pkl') \n",
+    "  \n",
+    "# Load the model from the file \n",
+    "knn_from_joblib = joblib.load('filename.pkl') \n",
+    "\n",
+    "s = pickle.dumps(clf)\n",
+    "\n",
+    "clf2 = pickle.loads(s)"
+   ]
   },
   {
    "cell_type": "code",
